--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,37 @@
   }
 }
 
+
+.input-container {
+  position: relative;
+}
+
+.input-container input, .form button {
+  outline: none;
+}
+
+.input-container input {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
+
+.input-container span {
+  display: grid;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  place-content: center;
+}
+
+.input-container span svg {
+  color: black;
+  width: 1rem;
+  height: 1rem;
+}
 /* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
